# polymarket_strategy

./: .env.example  .gitignore  MONITORS_SPEC.md  NO_SIDE_SPEC.md  README.md  _build_pdf.py  backtest_log.txt  lambda_handler.py  run_live.sh
.claude/: MUSK_SPEC.md  claude.md
deploy/: com.wonsang.polymarket-dashboard.plist.template  cron_jobs.crontab  ec2_diagnose.sh  ec2_divergence_probe.sh  ec2_measure_ece.sh  ec2_probe_closed.sh  ec2_probe_gamma.sh  ec2_probe_getmarket.sh  ec2_recover.sh  ec2_reopen_premature.sh  ec2_settle.sh  (+11 more)
polymarket_strat/: __init__.py  __main__.py  api.py  backtest.py  config.py  execution.py  main.py  monitor.py  pyproject.toml  risk.py  sample_data.py  strategy.py  whale_positions.py
polymarket_strat/application/: __init__.py  service.py
polymarket_strat/domain/: __init__.py  models.py
polymarket_strat/domain/strategies/: __init__.py  insider_detection.py  mispricing.py  whale_following.py
polymarket_strat/domain/weather/: calibration.py  city_calibration.py  coherence.py  features.py  forecast.py  models.py  nowcast.py  quantile_pricing.py  reliability.py  season.py  strategy.py  tail_no_strategy.py  tail_strategy.py
polymarket_strat/infrastructure/: __init__.py  real_data.py
polymarket_strat/infrastructure/weather/: grib_client.py  market_scanner.py  persistence.py  station_client.py
polymarket_strat/live/: __init__.py  doctor.py  executor.py  orderbook.py  persistence.py  runner.py  slippage.py
polymarket_strat/notifications/: claude_gate.py  telegram.py
polymarket_strat/presentation/: __init__.py  reporting.py
(+136 files in other folders)
